--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@
     max-width: 30px;
     width: 100%;
 }
+
+
+#go-top{border-radius: 3px;background-color: rgba(70,70,70,.5);display: block;position: fixed;bottom: 15px;width: 45px;height: 45px;text-align: center;-webkit-backface-visibility: hidden;backface-visibility: hidden;-webkit-perspective: 1000;-ms-perspective: 1000;perspective: 1000;-webkit-transform: translateZ(0px);-ms-transform: translateZ(0px);transform: translateZ(0px);right: -60px;opacity: 0;transition: all 0.2s ease-in-out;-webkit-transition: all 0.2s ease-in-out;-ms-transition: all 0.2s ease-in-out;-moz-transition: all 0.2s ease-in-out}
+#go-top i{line-height: 45px;margin-right: auto;margin-left: auto}
+#go-top.activo{right: 15px;opacity: 1;z-index: 1000;background:#426db3;}
+#go-top.activo:hover{cursor: pointer}
