añadir plugin whatsapp

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,47 @@
 #go-top i{line-height: 45px;margin-right: auto;margin-left: auto}
 #go-top.activo{right: 15px;opacity: 1;z-index: 1000;background:#426db3;}
 #go-top.activo:hover{cursor: pointer}
+
+
+.whatsapp_float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    left: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+
+
+.whatsapp.icon {
+    margin: 0;
+    font-size: 40px;
+
+}
+.whatsapp_float:hover .whatsapp.icon {
+    opacity: 0.8;
+    color: #fff;
+}
+
+
+/* for mobile */
+@media screen and (max-width: 767px) {
+    .whatsapp-icon {
+        margin-top: 10px;
+    }
+
+    .whatsapp_float {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
+    }
+}
