--- a/src/index.css
+++ b/src/index.css
@@ -18,28 +18,41 @@
 }
 
 
-#go-top{border-radius: 3px;background-color: rgba(70,70,70,.5);display: block;position: fixed;bottom: 15px;width: 45px;height: 45px;text-align: center;-webkit-backface-visibility: hidden;backface-visibility: hidden;-webkit-perspective: 1000;-ms-perspective: 1000;perspective: 1000;-webkit-transform: translateZ(0px);-ms-transform: translateZ(0px);transform: translateZ(0px);right: -60px;opacity: 0;transition: all 0.2s ease-in-out;-webkit-transition: all 0.2s ease-in-out;-ms-transition: all 0.2s ease-in-out;-moz-transition: all 0.2s ease-in-out}
+#go-top{border-radius: 3px;background-color: rgba(70,70,70,.5);  display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;position: fixed;bottom: 15px;width: 45px;height: 45px;text-align: center;-webkit-backface-visibility: hidden;backface-visibility: hidden;-webkit-perspective: 1000;-ms-perspective: 1000;perspective: 1000;-webkit-transform: translateZ(0px);-ms-transform: translateZ(0px);transform: translateZ(0px);right: -60px;opacity: 0;transition: all 0.2s ease-in-out;-webkit-transition: all 0.2s ease-in-out;-ms-transition: all 0.2s ease-in-out;-moz-transition: all 0.2s ease-in-out}
 #go-top i{line-height: 45px;margin-right: auto;margin-left: auto}
-#go-top.activo{right: 15px;opacity: 1;z-index: 1000;background:#426db3;}
+#go-top.activo {
+    right: 15px;
+    opacity: 1;
+    z-index: 1000;
+    background: #426db3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
 #go-top.activo:hover{cursor: pointer}
 
 
 .whatsapp_float {
     position: fixed;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     bottom: 40px;
     left: 40px;
-    background-color: #25d366;
+    border: 2px solid #25d366;
     color: #FFF;
     border-radius: 50px;
     text-align: center;
     font-size: 30px;
     box-shadow: 2px 2px 3px #999;
     z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-
 
 .whatsapp.icon {
     margin: 0;
@@ -54,9 +67,11 @@
 
 /* for mobile */
 @media screen and (max-width: 767px) {
-    .whatsapp-icon {
-        margin-top: 10px;
-    }
+   .whatsapp.icon {
+    margin: 5px;
+    font-size: 20px;
+
+}
 
     .whatsapp_float {
         width: 40px;
