--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,27 @@
     color: #fff;
 }
 
+.loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #426db3;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 1s linear infinite;
+    
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
+
+
+
 /* for mobile */
 @media screen and (max-width: 767px) {
    .whatsapp.icon {
