--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,10 @@
     }
   } 
 
-
+  #contacto label:after {
+	content: '*';
+	color: red;
+  }
 
 /* for mobile */
 @media screen and (max-width: 767px) {
