--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@
     justify-content: center;
     align-items: center;
     color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #go-top.activo:hover{cursor: pointer}
 
@@ -48,7 +49,7 @@
     border-radius: 50px;
     text-align: center;
     font-size: 30px;
-    box-shadow: 2px 2px 3px #999;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     z-index: 100;
     display: flex;
     justify-content: center;
