--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,26 @@
 }
 #go-top.activo:hover{cursor: pointer}
 
+nav.menu-principal.activo {
+    position: fixed!important;
+    background-color: #fff;
+    left: 0;
+    right: 0;
+    transition: all 1s ease-in-out;
+    z-index: 999;
+    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
+    top: 0;
+}
 
+nav.menu-principal {
+    transition: all 1s ease-in-out;
+    background-color: #fff;
+    z-index: 999;
+    top: -200px;
+    position: fixed!important;
+    left: 0;
+    right: 0;
+}
 .whatsapp_float {
     position: fixed;
     width: 40px;
@@ -109,5 +128,15 @@
         bottom: 20px;
         right: 10px;
         font-size: 22px;
+    }
+
+
+    nav.menu-principal.activo {
+       padding: 1em;
+    }
+    
+    nav.menu-principal {
+        padding: 1em;
+      
     }
 }
