arreglar bugs y scroll

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
     right: 15px;
     opacity: 1;
     z-index: 1000;
-    background: #426db3;
+    background: #464646;
     display: flex;
     justify-content: center;
     align-items: center;
